test that metadata doesn't override baseurl or url if set

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,10 @@ description: The literal canary in the coal mine, at least when it comes to GitH
 
 repository: github/pages-canary
 
+# TEST
+url: "http://example.com"
+baseurl: "/something-random"
+
 gems:
   - jekyll-github-metadata
   - jemoji
