Require jekyll-octicons

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ gems:
   - jemoji
   - jekyll-coffeescript
   - jekyll-mentions
+  - jekyll-octicons
   - jekyll-sitemap
   - jekyll-seo-tag
   - jekyll_test_plugin_malicious
